# ZPR_ResMonitor

./: .gitignore  CMakeLists.txt  README.md  SConscript.scons  SConstruct  cert.pem  doxygen.conf  key.pem
doc/html/: ConfigurationParser_8hpp_source.html  CpuState_8hpp_source.html  HddState_8hpp_source.html  LinuxResProvider_8hpp_source.html  PredicateEngine_8hpp_source.html  PredicateTypes_8hpp_source.html  Predicate_8hpp_source.html  RamState_8hpp_source.html  ResUsageProvider_8hpp_source.html  SamplingManager_8hpp_source.html  WindowsResProvider_8hpp_source.html  annotated.html  classConfigurationParser-members.html  classConfigurationParser.html  classCpuState-members.html  classCpuState.html  classFlexLexer-members.html  classFlexLexer.html  classFlexLexer__inherit__graph.dot  classFlexLexer__inherit__graph.md5  classHddState-members.html  classHddState.html  classPredicate-members.html  classPredicate.html  classPredicateEngine-members.html  classPredicateEngine.html  classPredicate__1and2-members.html  classPredicate__1and2.html  classPredicate__1and2__coll__graph.dot  classPredicate__1and2__inherit__graph.md5  classPredicate__1element-members.html  classPredicate__1element.html  classPredicate__1element__inherit__graph.dot  classPredicate__1element__inherit__graph.md5  classPredicate__1or2and3-members.html  classPredicate__1or2and3.html  classPredicate__1or2and3__coll__graph.md5  classPredicate__1or2and3__inherit__graph.dot  classPredicate__inherit__graph.dot  classPredicate__inherit__graph.md5  (+273 more)
flex/: configparser.l
include/: ConfigurationParser.hpp  CpuMonitor.h  CpuState.hpp  HddState.hpp  LinuxResProvider.hpp  Predicate.hpp  PredicateEngine.hpp  PredicateTypes.hpp  RamState.hpp  ResUsageProvider.hpp  SamplingManager.hpp  WindowsResProvider.hpp  client_http.hpp  client_https.hpp  configrawdata.h  configrawdata.hpp  configurationParser.hpp  crypto.hpp  flex.hpp  server_http.hpp  server_https.hpp  smtp_client.hpp  status_code.hpp  utility.hpp
src/: https_examples.cpp  main.cpp
web/: index.html  test.html
(+223 files in other folders)
