cmake_minimum_required(VERSION 3.5)

project(zpr_monitor)
include(CTest)
enable_testing()

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -g -DDEBUG")
set(LIB_NAME monitorlib)
set(APP_NAME monitor)
set(TESTS_NAME testsmonitor)
set(OPENSSL_ROOT_DIR = C:/OpenSSL-Win64)

SET(BOOST_ROOT "~/boost_1_65_1")
SET(BOOST_ROOT "C:/Program Files/boost/boost_1_65_1")
set(BOOST_LIBRARYDIR ${BOOST_ROOT}/stage/lib/)
set(BOOST_LIBRARYDIR "C:/Program Files/boost/boost_1_65_1/lib")
set(BOOST_LIBRARYDIR "C:/Program Files/boost/boost_1_65_1/lib/stage")
set(Boost_USE_STATIC_LIBS ON)
set(Boost_USE_MULTITHREADED ON)	

find_package(Boost COMPONENTS log log_setup thread unit_test_framework log system filesystem REQUIRED)
IF (Boost_FOUND)
    INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
    ADD_DEFINITIONS( "-DHAS_BOOST" )
ENDIF()
set(Boost_USE_STATIC_LIBS   ON)
set(Boost_USE_MULTITHREADED ON)
find_package(OpenSSL REQUIRED)

file(GLOB APP_SOURCE_FILES ${PROJECT_SOURCE_DIR}/src/*.cpp)
file(GLOB_RECURSE LIB_SOURCE_FILES ${PROJECT_SOURCE_DIR}/src/library_src/*.cpp)
file(GLOB_RECURSE TESTS_SOURCE_FILES ${PROJECT_SOURCE_DIR}/tests_src/*.cpp)
file(GLOB_RECURSE APP_INCLUDE_FILES ${PROJECT_SOURCE_DIR}/include/*.hpp)

message(STATUS "APP_FILES " ${APP_SOURCE_FILES})
message(STATUS "LIB_FILES " ${LIB_SOURCE_FILES})
message(STATUS "TESTS_FILES " ${TESTS_SOURCE_FILES})

include_directories(${PROJECT_SOURCE_DIR}/include)
include_directories(${OPENSSL_INCLUDE_DIR})
if (WIN32)
	set(LIBS ${Boost_LIBRARIES} pdh ${OPENSSL_LIBRARIES})
else()
	set(LIBS ${Boost_LIBRARIES} pthread ${OPENSSL_LIBRARIES})
endif()

add_library(${LIB_NAME} STATIC ${LIB_SOURCE_FILES} ${APP_INCLUDE_FILES})
target_link_libraries(${LIB_NAME} ${LIBS})

add_executable(${APP_NAME} ${APP_SOURCE_FILES})
target_link_libraries(${APP_NAME} ${LIB_NAME} ${LIBS})

add_executable(${TESTS_NAME} ${TESTS_SOURCE_FILES})
target_link_libraries(${TESTS_NAME} ${LIB_NAME} ${LIBS})
add_test(tests ${TESTS_NAME})
